# wikivector

./: .zenodo.json  README.md  setup.cfg  setup.py
src/wikivector/: vector.py  wiki.py
