[metadata]
name = wikivector
version = 1.2.1
url = https://github.com/mortonne/wikivector
author = Neal Morton
author_email = mortonne@gmail.com
description = WikiVector: Tools for encoding Wikipedia articles as vectors
long_description = file: README.md
long_description_content_type = text/markdown
keywords = NLP, Wikipedia
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    selectolax
    h5py>=3
    pandas
    tensorflow_hub
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
